<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/Main_LinearLayout1"
        android:layout_width="200dip"
        android:layout_height="300dip"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/Main_btn_measure"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:text="@string/main_text_measure"
            android:textSize="30sp" />

        <Button
            android:id="@+id/Main_btn_print"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:text="@string/main_text_print"
            android:textSize="30sp" />

        <Button
            android:id="@+id/Main_btn_filemanagement"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:text="@string/main_text_datamanagement"
            android:textSize="30sp" />
    </LinearLayout>
    
</RelativeLayout>